<resources>

    <string name="app_name">Halloween Jump</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main__menu">Halloween Jump</string>
    <string name="menu_about">About</string>
    <string name="menu_start_game">Start Game</string>
    <string name="menu_contact_us">Contact Us</string>
    <string name="menu_score_list">Score List</string>
    <string name="menu_quit">Quit</string>
    <string name="title_activity_select__avatar">Select Avatar</string>
    <string name="title_activity_jump">JumpActivity</string>
    <string name="menu_game_over">Game Over</string>
    <string name="Bsetimage" />

    <color name="white">#FFFFFF</color>

    <string name="btstartgame">Start Game</string>
    <string name="btexit">Exit</string>
    <string name="satext">Please Select an Avatar</string>

    <color name="black">#ff000000</color>

    <string name="title_activity_background">Halloween Jump</string>
    <string name="title_activity_about">About</string>
    <string name="Game_Info">ISCG7474\nMoblie Software Development\nAssignment Four\nGroup Two</string>
    <string name="Game_Description">\nIt is a game that is similiar to doodle jump. The Theme is Halloween based\nThe Player is able to select an avatar and play the game.</string>
    <string name="title_activity_contact__us">Contact_Us</string>
    <string name="Contact_Info">\nBrandon Apanui.\n Chris Burnand.\nIsuru Palliyaguru.\nLuke Wang.</string>

</resources>