<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
       
    <TextView
        android:layout_width            = "wrap_content"
        android:layout_height           = "wrap_content"
        android:padding                 = "30dip"
        android:layout_centerHorizontal = "true"
        android:layout_centerVertical   = "true"
        android:gravity="center"
        android:text                    = "@string/Game_Description"
        tools:context                   = ".About" />


    <Button
        android:id="@+id/about_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/btexit" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/Game_Info" />

</RelativeLayout>
