<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignParentTop="true"
       android:layout_centerHorizontal="true"
       android:layout_centerVertical="true"
       android:layout_marginTop="10dip"
       android:gravity="center"
       android:text="@string/Game_Info" />
       
    <TextView
        android:layout_width            = "wrap_content"
        android:layout_height           = "wrap_content"
        android:padding                 = "30dip"
        android:layout_centerHorizontal = "true"
        android:layout_centerVertical   = "true"
        android:gravity="center"
        android:text                    = "@string/Contact_Info"
        tools:context                   = ".About" />


    <Button
        android:id="@+id/contact_us_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/btexit" />

</RelativeLayout>
